samples/_failures_safe/1761634055_c4b033_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73e6e78d.c: In function ‘main’:
./samples/SAFE/__tmp_73e6e78d.c:148:5: error: expected declaration or statement at end of input
  148 |     printf("=== Log Analyzer ===\n");
      |     ^~~~~~
